--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,12 +9,17 @@ runs:
       with:
         node-version-file: .nvmrc
 
+    - name: Enable Corepack
+      run: corepack enable
+      shell: bash
+
     - name: Restore dependencies
       id: yarn-cache
       uses: actions/cache/restore@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
       with:
         path: |
           **/node_modules
+          .yarn/cache
           .yarn/install-state.gz
         key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}-${{ hashFiles('**/package.json', '!node_modules/**') }}
         restore-keys: |
@@ -25,6 +30,8 @@ runs:
       if: steps.yarn-cache.outputs.cache-hit != 'true'
       run: yarn install --immutable
       shell: bash
+      env:
+        NODE_OPTIONS: --max-old-space-size=4096
 
     - name: Cache dependencies
       if: steps.yarn-cache.outputs.cache-hit != 'true'
@@ -32,5 +39,6 @@ runs:
       with:
         path: |
           **/node_modules
+          .yarn/cache
           .yarn/install-state.gz
         key: ${{ steps.yarn-cache.outputs.cache-primary-key }}
