--- a/android/build.gradle
+++ b/android/build.gradle
@@ -59,18 +59,19 @@ android {
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_11
-    targetCompatibility JavaVersion.VERSION_11
+    sourceCompatibility JavaVersion.VERSION_17
+    targetCompatibility JavaVersion.VERSION_17
   }
   
   kotlinOptions {
-    jvmTarget = "11"
+    jvmTarget = "17"
   }
 
   sourceSets {
     main {
       java.srcDirs += [
-        "${buildDir}/generated/source/codegen/java"
+        "${buildDir}/generated/source/codegen/java",
+        "build/generated/source/codegen/java"
       ]
     }
   }
