--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -21,14 +21,16 @@ runs:
           **/node_modules
           .yarn/cache
           .yarn/install-state.gz
-        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}-${{ hashFiles('**/package.json', '!node_modules/**') }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}-${{ hashFiles('package.json', 'example/package.json') }}
         restore-keys: |
           ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
           ${{ runner.os }}-yarn-
 
     - name: Install dependencies
       if: steps.yarn-cache.outputs.cache-hit != 'true'
-      run: yarn install --immutable
+      run: |
+        # Try immutable install first, fallback to regular install if needed
+        yarn install --immutable --mode=update-lockfile || yarn install
       shell: bash
       env:
         NODE_OPTIONS: --max-old-space-size=4096
