--- a/example/package.json
+++ b/example/package.json
@@ -20,7 +20,7 @@
     "expo-image-picker": "~16.0.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native-image-code-scanner": "file:../"
+    "react-native-image-code-scanner": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
