chore: update CI workflow to cache Expo dependencies and streamline build process for iOS and Android

--- a/package.json
+++ b/package.json
@@ -119,7 +119,14 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
-    ]
+    ],
+    "rules": {
+      "header-max-length": [
+        2,
+        "always",
+        150
+      ]
+    }
   },
   "release-it": {
     "git": {
