--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,24 +146,22 @@ jobs:
         with:
           xcode-version: ${{ env.XCODE_VERSION }}
 
-      - name: Cache cocoapods
-        id: cocoapods-cache
+      - name: Cache Expo
+        id: expo-cache
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
         with:
           path: |
-            example/ios/Pods
-            example/vendor/bundle
-          key: ${{ runner.os }}-cocoapods-${{ hashFiles('example/ios/Podfile.lock') }}
+            example/.expo
+            example/node_modules
+          key: ${{ runner.os }}-expo-${{ hashFiles('example/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-cocoapods-
+            ${{ runner.os }}-expo-
 
-      - name: Install cocoapods
-        if: env.turbo_cache_hit != 1 && steps.cocoapods-cache.outputs.cache-hit != 'true'
+      - name: Setup Expo
+        if: env.turbo_cache_hit != 1 && steps.expo-cache.outputs.cache-hit != 'true'
         run: |
           cd example
-          bundle install
-          bundle exec pod repo update --verbose
-          bundle exec pod install --project-directory=ios
+          yarn install --immutable
 
       - name: Build example for iOS
         run: |
