fix: resolve CI and Android build issues with Yarn lockfile and JVM compatibility (#2)
* refactor: README and example documentation to clarify automatic preprocessing features

* chore: update CHANGELOG for version 0.1.0 release, add compatibility guide, and enhance example app

* chore: remove pre-publish script, enhance example app with improved format selection logic

* ci: improve workflow configuration with memory optimization and Yarn Berry support

* chore: update CHANGELOG, README, example to clarify preprocessing, enhance ESLint configuration

* chore: add podspec and configuration, update Android build settings, refactor image decoding logic

* chore: enhance caching strategy in CI workflow, improve Yarn installation process

* chore: modify package.json for workspace support

* chore: update yarn.lock to use workspace protocol

* chore: update CI workflow to cache Expo dependencies and streamline build process for iOS and Android

* chore: update CI workflow to set CI environment variable and modify build commands for Android and iOS

* chore: set CI environment variable for Android and iOS build jobs in CI workflow

* chore: set CI environment variable for build commands in package.json

* fix: resolve CI build issue with Expo prebuild in non-interactive mode

* fix: correct iOS build sequence by moving pod install after expo prebuild

* chore: update Xcode version in CI workflow from 16.2 to 16.4

--- a/example/package.json
+++ b/example/package.json
@@ -5,29 +5,27 @@
   "main": "App.tsx",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint .",
     "setup": "expo install",
     "prebuild": "expo prebuild",
     "prebuild:clean": "expo prebuild --clean",
-    "build:android": "expo run:android",
-    "build:ios": "expo run:ios"
+    "build:android": "expo prebuild --platform android && cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug",
+    "build:ios": "expo prebuild --platform ios && cd ios && pod install && xcodebuild -workspace ImageCodeScannerExample.xcworkspace -scheme ImageCodeScannerExample -configuration Debug -sdk iphonesimulator -derivedDataPath build"
   },
   "dependencies": {
     "expo": "~52.0.0",
-    "expo-status-bar": "~2.0.0",
-    "expo-image-picker": "~16.0.0",
-    "expo-permissions": "~18.0.0",
+    "expo-image-picker": "~16.0.3",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-image-code-scanner": "file:../"
+    "react-native": "0.76.9",
+    "react-native-image-code-scanner": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
-    "@types/react-native": "~0.76.0",
     "eslint": "^8.56.0",
     "typescript": "^5.3.0"
   },
