--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,22 +9,31 @@ runs:
       with:
         node-version-file: .nvmrc
 
+    - name: Enable Corepack
+      run: corepack enable
+      shell: bash
+
     - name: Restore dependencies
       id: yarn-cache
       uses: actions/cache/restore@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
       with:
         path: |
           **/node_modules
+          .yarn/cache
           .yarn/install-state.gz
-        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}-${{ hashFiles('**/package.json', '!node_modules/**') }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}-${{ hashFiles('package.json', 'example/package.json') }}
         restore-keys: |
           ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
           ${{ runner.os }}-yarn-
 
     - name: Install dependencies
       if: steps.yarn-cache.outputs.cache-hit != 'true'
-      run: yarn install --immutable
+      run: |
+        # Use immutable install for Yarn v3
+        yarn install --immutable
       shell: bash
+      env:
+        NODE_OPTIONS: --max-old-space-size=4096
 
     - name: Cache dependencies
       if: steps.yarn-cache.outputs.cache-hit != 'true'
@@ -32,5 +41,6 @@ runs:
       with:
         path: |
           **/node_modules
+          .yarn/cache
           .yarn/install-state.gz
         key: ${{ steps.yarn-cache.outputs.cache-primary-key }}
