--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,12 @@ on:
     types:
       - checks_requested
 
+env:
+  # Increase Node.js memory to prevent allocation errors
+  NODE_OPTIONS: --max-old-space-size=4096
+  # Ensure Yarn uses immutable installs
+  YARN_ENABLE_IMMUTABLE_INSTALLS: true
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -54,12 +60,18 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TURBO_CACHE_DIR: .turbo/android
+      CI: 1
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Setup
         uses: ./.github/actions/setup
+
+      - name: Install example dependencies
+        run: cd example && yarn install --immutable
+        env:
+          NODE_OPTIONS: --max-old-space-size=4096
 
       - name: Cache turborepo for Android
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -102,21 +114,28 @@ jobs:
 
       - name: Build example for Android
         env:
-          JAVA_OPTS: "-XX:MaxHeapSize=6g"
+          JAVA_OPTS: '-XX:MaxHeapSize=6g'
+          CI: 1
         run: |
           yarn turbo run build:android --cache-dir="${{ env.TURBO_CACHE_DIR }}"
 
   build-ios:
     runs-on: macos-latest
     env:
-      XCODE_VERSION: 16.2
+      XCODE_VERSION: 16.4
       TURBO_CACHE_DIR: .turbo/ios
+      CI: 1
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Setup
         uses: ./.github/actions/setup
+
+      - name: Install example dependencies
+        run: cd example && yarn install --immutable
+        env:
+          NODE_OPTIONS: --max-old-space-size=4096
 
       - name: Cache turborepo for iOS
         uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -140,14 +159,8 @@ jobs:
         with:
           xcode-version: ${{ env.XCODE_VERSION }}
 
-      - name: Install cocoapods
-        if: env.turbo_cache_hit != 1 && steps.cocoapods-cache.outputs.cache-hit != 'true'
-        run: |
-          cd example
-          bundle install
-          bundle exec pod repo update --verbose
-          bundle exec pod install --project-directory=ios
-
       - name: Build example for iOS
+        env:
+          CI: 1
         run: |
           yarn turbo run build:ios --cache-dir="${{ env.TURBO_CACHE_DIR }}"
