--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,9 @@
 name: Publish to npm
 
 on:
+  push:
+    tags:
+      - 'v*.*.*'
   release:
     types: [published]
   workflow_dispatch:
@@ -23,7 +26,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
       - name: Checkout
@@ -32,14 +35,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Install Yarn
-        run: npm install -g yarn
+      - name: Enable Corepack (Yarn 3)
+        run: |
+          corepack enable
+          corepack prepare yarn@3.6.1 --activate
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Run tests
         run: yarn test
@@ -54,30 +59,59 @@ jobs:
         run: yarn build
 
       - name: Set version
-        if: github.event.inputs.version != ''
-        run: npm version ${{ github.event.inputs.version }} --no-git-tag-version
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.version != '' }}
+        env:
+          INPUT_VERSION: ${{ inputs.version }}
+        run: npm version "$INPUT_VERSION" --no-git-tag-version
 
       - name: Publish to npm
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_DIST_TAG: ${{ inputs.tag }}
         run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            npm publish --tag ${{ github.event.inputs.tag }}
+          if [ "${GITHUB_EVENT_NAME}" = "workflow_dispatch" ]; then
+            TAG="${NPM_DIST_TAG:-latest}"
+            npm publish --tag "$TAG"
           else
             npm publish
           fi
+
+      - name: Determine release metadata
+        if: ${{ github.event_name != 'release' }}
+        id: meta
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          INPUT_VERSION: ${{ inputs.version }}
+        run: |
+          set -euo pipefail
+          TAG=""
+          PRERELEASE="false"
+          if [ "${GITHUB_EVENT_NAME}" = "push" ]; then
+            TAG="${GITHUB_REF_NAME}"
+          elif [ "${GITHUB_EVENT_NAME}" = "workflow_dispatch" ]; then
+            if [ -n "${INPUT_VERSION:-}" ]; then
+              TAG="v${INPUT_VERSION}"
+            else
+              PKG_VERSION="$(node -p "require('./package.json').version")"
+              TAG="v${PKG_VERSION}"
+            fi
+          fi
+          if echo "$TAG" | grep -q -- "-"; then
+            PRERELEASE="true"
+          fi
+          echo "tag=$TAG" >> "$GITHUB_OUTPUT"
+          echo "prerelease=$PRERELEASE" >> "$GITHUB_OUTPUT"
 
       - name: Create GitHub Release Notes
-        if: github.event_name != 'release'
+        if: ${{ github.event_name != 'release' }}
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ github.event.inputs.version || 'package.json version' }}
-          release_name: Release v${{ github.event.inputs.version || 'package.json version' }}
+          tag_name: ${{ steps.meta.outputs.tag }}
+          release_name: Release ${{ steps.meta.outputs.tag }}
           body: |
             ## Changes
-            
+
             See [CHANGELOG.md](https://github.com/nguyenthanhan/react-native-image-code-scanner/blob/main/CHANGELOG.md) for details.
           draft: false
-          prerelease: ${{ github.event.inputs.tag != 'latest' }}
+          prerelease: ${{ steps.meta.outputs.prerelease == 'true' }}
