--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,12 @@
     "strict": true,
     "target": "ESNext",
     "verbatimModuleSyntax": true
-  }
+  },
+  "exclude": [
+    "example/**/*",
+    "node_modules",
+    "lib",
+    "**/*.test.*",
+    "**/*.spec.*"
+  ]
 }
