--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,7 +76,20 @@ jobs:
           INPUT_VERSION: ${{ inputs.version }}
         run: npm version "$INPUT_VERSION" --no-git-tag-version
 
+      - name: Check if version already exists on npm
+        id: check_version
+        run: |
+          PKG_VERSION=$(node -p "require('./package.json').version")
+          if npm view "$(node -p "require('./package.json').name")@${PKG_VERSION}" version >/dev/null 2>&1; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+            echo "Version ${PKG_VERSION} already exists on npm, skipping publish"
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+            echo "Version ${PKG_VERSION} does not exist on npm, will publish"
+          fi
+
       - name: Publish to npm
+        if: steps.check_version.outputs.exists == 'false'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_DIST_TAG: ${{ inputs.tag }}
@@ -112,7 +125,6 @@ jobs:
           fi
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
           echo "prerelease=$PRERELEASE" >> "$GITHUB_OUTPUT"
-
 
       - name: Create GitHub Release
         uses: actions/github-script@v7
