--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
       "tagName": "v${version}"
     },
     "npm": {
-      "publish": true
+      "publish": false
     },
     "github": {
       "release": true
